filter spacing fix

--- a/src/templates/posts.css
+++ b/src/templates/posts.css
@@ -52,6 +52,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  white-space: nowrap;
 }
 
 #filter a {
